--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>Vite + React + TS</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="../../src/assets/img/favicon.png"
+      style="border-radius: 50%"
+    />
+    <title>Advocacia Lopes</title>
   </head>
   <body>
     <div id="root"></div>
