--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../src/assets/img/favicon.png"
+      href="https://advocacy-rho.vercel.app/src/assets/img/favicon.png"
       style="border-radius: 50%"
     />
+
     <title>Advocacia Lopes</title>
   </head>
   <body>
