--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://advocacy-rho.vercel.app/src/assets/img/favicon.png"
-      style="border-radius: 50%"
-    />
+    <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon" />
 
     <title>Advocacia Lopes</title>
   </head>
