--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon" />
-
+    
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "RegisLopes",
+        "url": "https://www.regislopes.com",
+        "logo": "https://drive.google.com/file/d/16H8WTwpkJ3CDAJoqAJ8kgG_abB5se9Sx/view"
+      }
+    </script>
     <title>Advocacia Lopes</title>
   </head>
   <body>
