--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta property="og:type" content="website" />
+    <meta name="author" content="Reginaldo Lopes" />
     <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon" />
-    
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
