--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta
+      property="og:image"
+      content="https://drive.google.com/file/d/1MN74uquJRO-UL_Bfxqmdq-oKqG-w5_w3/view?usp=drive_link"
+    />
     <meta property="og:type" content="website" />
     <meta name="author" content="Reginaldo Lopes" />
     <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./src/assets/img/logomarca.png" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
