--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="https://drive.google.com/file/d/1MN74uquJRO-UL_Bfxqmdq-oKqG-w5_w3/view?usp=drive_link"
     />
     <meta property="og:type" content="website" />
-    <meta name="author" content="Reginaldo Lopes" />
+    <meta name="author" content="Felipe de Souza Lima" />
     <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./src/assets/img/logomarca.png" />
     <script type="application/ld+json">
