--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     />
     <meta property="og:type" content="website" />
     <meta name="author" content="Felipe de Souza Lima" />
+    <meta
+      name="keywords"
+      content="Advocacia, Artigo, Direito, Regis, Reginaldo, Lopes, Regis Lopes, Reginaldo Lopes"
+    />
     <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./src/assets/img/logomarca.png" />
     <script type="application/ld+json">
