--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
       property="og:image"
       content="https://drive.google.com/file/d/1MN74uquJRO-UL_Bfxqmdq-oKqG-w5_w3/view?usp=drive_link"
     />
-    <meta property="og:type" content="website" />
-    <meta name="author" content="Felipe de Souza Lima" />
+    <meta
+      name="description"
+      content="Reginaldo Lopes, Advogado especializado em direito cível, agronegócio, criminal, eleitoral, imobiliário, entre outros, em Campo Grande, MS. Consulta inicial gratuita disponível."
+    />
     <meta
       name="keywords"
       content="Advocacia, Artigo, Direito, Regis, Reginaldo, Lopes, Regis Lopes, Reginaldo Lopes"
     />
+    <meta property="og:type" content="website" />
+    <meta name="author" content="Felipe de Souza Lima" />
     <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./src/assets/img/logomarca.png" />
     <script type="application/ld+json">
