change link meta

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <meta
-      property="og:image"
-      content="https://drive.google.com/file/d/1MN74uquJRO-UL_Bfxqmdq-oKqG-w5_w3/view?usp=drive_link"
-    />
+    <meta property="og:image" content="https://imgur.com/a/drHauIq" />
     <meta
       name="description"
       content="Reginaldo Lopes, Advogado especializado em direito cível, agronegócio, criminal, eleitoral, imobiliário, entre outros, em Campo Grande, MS. Consulta inicial gratuita disponível."
@@ -28,7 +25,7 @@
         "@type": "Organization",
         "name": "RegisLopes",
         "url": "https://www.regislopes.com",
-        "logo": "https://drive.google.com/file/d/16H8WTwpkJ3CDAJoqAJ8kgG_abB5se9Sx/view"
+        "logo": "https://imgur.com/a/ZLxT4tu"
       }
     </script>
     <title>Advocacia Lopes</title>
