--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         "logo": "https://imgur.com/a/ZLxT4tu"
       }
     </script>
-    <title>Advocacia Lopes</title>
+    <title>Lopes Advocacia</title>
   </head>
   <body>
     <div id="root"></div>
