--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <meta name="author" content="Felipe de Souza Lima" />
     <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./src/assets/img/logomarca.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
